[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deploy-webhook"
dynamic = ["version"]
description = 'Turplanlegger deploy webhook for CI/CD of docker images'
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "Are Schjetne", email = "sixcare.as@gmail.com" },
  { name = "Lasse Heia", email = "lasse.heia@outlook.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "fastapi==0.95.2",
  "uvicorn==0.22.0"
]

[project.optional-dependencies]
dev = [
    "hatch==1.7.0",
    "pre-commit==3.3.2",
    "pytest==7.3.1",
    "pytest-csv>=3.0.0",
    "pytest-cov==4.0.0",
    "wheel==0.38.4",
    "ruff==v0.0.269"
]
[project.urls]
Documentation = "https://github.com/turplanlegger/deploy-webhook#readme"
Issues = "https://github.com/turplanlegger/deploy-webhook/issues"
Source = "https://github.com/turplanlegger/deploy-webhook"

[tool.hatch.version]
path = "deploy_webhook/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.10", "3.11"]

[tool.hatch.envs.lint]
detached = true
dependencies = [
  "black>=23.1.0",
  "mypy>=1.0.0",
  "ruff>=0.0.243",
]
[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:deploy_webhook tests}"
style = [
  "ruff {args:.}",
  "black --check --diff {args:.}",
]
fmt = [
  "black {args:.}",
  "ruff --fix {args:.}",
  "style",
]
all = [
  "style",
  "typing",
]

[tool.black]
target-version = ["py311"]
line-length = 99
skip-string-normalization = true

[tool.ruff]
target-version = "py311"
line-length = 99
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.isort]
known-first-party = ["deploy_webhook"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.coverage.run]
source_pkgs = ["deploy_webhook", "tests"]
branch = true
parallel = true
omit = [
  "deploy_webhook/__about__.py",
]

[tool.coverage.paths]
deploy_webhook = ["deploy_webhook", "*/deploy-webhook/deploy_webhook"]
tests = ["tests", "*/deploy-webhook/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
